--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ir</string>
+    <string name="app_name">TvTest</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="logo">logo</string>
 </resources>
